--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +17,8 @@
     "knex": "^0.21.0",
     "pg": "^8.0.3",
     "nodemon": "^2.0.3"
+  },
+  "engines": {
+    "node": "12.13.1"
   }
 }
