--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.21.0",
-    "pg": "^8.0.3",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "pg": "^8.0.3"
   },
   "engines": {
     "node": "12.13.1"
